Ajuste de urls dos datasets

--- a/sexism_analysis_randomforest.ipynb
+++ b/sexism_analysis_randomforest.ipynb
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Improtação dos datasets que serão utilizados\n",
-    "df_1 = pd.read_csv('datasets/dev.csv')\n",
-    "df_2 = pd.read_csv('datasets/test (1).csv')\n",
-    "df_3 = pd.read_csv('datasets/train (2).csv')"
+    "df_1 = pd.read_csv('https://raw.githubusercontent.com/Rogeriom49/sexism_analysis/refs/heads/main/datasets/dev.csv')\n",
+    "df_2 = pd.read_csv('https://raw.githubusercontent.com/Rogeriom49/sexism_analysis/refs/heads/main/datasets/test%20(1).csv')\n",
+    "df_3 = pd.read_csv('https://raw.githubusercontent.com/Rogeriom49/sexism_analysis/refs/heads/main/datasets/train%20(2).csv')"
    ]
   },
   {
